--- a/assets/css/Order.css
+++ b/assets/css/Order.css
@@ -79,25 +79,25 @@
     position: absolute;
     top: 680px;
     left: 520px;
-}
-#container{
-    background-color: black;
-    width: 1px;
-    height: 600px;
-    position: absolute;
-    top: 120px;
-    right: 800px;
+/*}*/
+/*#container{*/
+/*    background-color: black;*/
+/*    width: 1px;*/
+/*    height: 600px;*/
+/*    position: absolute;*/
+/*    top: 120px;*/
+/*    right: 800px;*/
 }
 #selectItem>h1{
     font-size: 45px;
     position: absolute;
-    right: -30%;
+    right: -40%;
     top: 10%;
 }
 #form1{
     position: absolute;
     top: 150px;
-    left: 900px;
+    left: 1100px;
 }
 .form-control{
     width: 70px;
@@ -143,13 +143,15 @@
 }
 
 #table_head>tr>th{
-    background-color: black;
+    background-color: green;
     color: white;
     font-size: 15px;
     font-family: 'Inria Sans', sans-serif;
     font-weight: 400;
     text-align: center;
     padding: 0;
+    position: relative;
+    left: 170px;
 }
 
 #table_head>tr>th:first-child{
