--- a/assets/css/Customer.css
+++ b/assets/css/Customer.css
@@ -2,6 +2,7 @@
     position: absolute;
     left: 10%;
     top: 15%;
+    color:black;
 }
 
 #customerForm{
@@ -51,23 +52,28 @@
     font-family: 'Inria Sans', sans-serif;
     font-weight: 400;
     align-items: center;
-    color: black;
+    color: white;
     text-align: center;
     padding: 0;
+   position: relative;
+    left: 350px;
+    top: 450px;
+
+
 
 
 }
 
 #customerButton>button:nth-child(1){
-    background-color: #C08261;
+    background-color: green;
 }
 
 #customerButton>button:nth-child(2){
-    background-color: #C8AE7D;
+    background-color: blue;
 }
 
 #customerButton>button:nth-child(3){
-    background-color: #BA704F;
+    background-color: red;
 }
 
 .form-label{
@@ -77,7 +83,7 @@
 }
 
 hr{
-    border: 2px solid black;
+    border: 2px solid purple;
     width: 1150px;
     position: absolute;
     left: 10%;
@@ -100,7 +106,7 @@ hr{
 }
 
 #customer_table_head>tr>th{
-    background-color: black;
+    background-color: green;
     color: white;
     font-size: 25px;
     font-family: 'Inria Sans', sans-serif;
