--- a/assets/css/Item.css
+++ b/assets/css/Item.css
@@ -58,6 +58,7 @@
     left: 350px;
     top: 450px;
 
+
 }
 
 #itemButton>button:nth-child(1){
@@ -69,7 +70,7 @@
 }
 
 #itemButton>button:nth-child(3){
-    background-color: red;
+    background-color: darkred;
 }
 
 .form-label{
